# MTMinePy

./: .gitignore  MANIFEST.in  README.md  README_CN.md  pyproject.toml  upload_pypi.bat  upload_pypi.sh
mtminepy/: __init__.py  app.py  cli.py
mtminepy/services/: data_service.py  ml_service.py  nlp_service.py  trans_service.py
mtminepy/templates/: base.html  data.html  explore.html  index.html  metric.html  model.html  preprocess.html
sample_data/: sample_multilingual.csv  sample_multilingual.md  sample_multilingual.txt  sample_multilingual.xlsx
